[package]
name = "mc-pi"
version = "0.1.1"
edition = "2024"
description = "Generate PI using Monte Carlo. Don't use this."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/monte-carlo-pi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
indicatif = "0.17.11"
rand = "0.9.1"
rayon = "1.10.0"
